video card styles

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
